2-part-dp-conv-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conv-app
  template:
    metadata:
      labels:
        app: conv-app
    spec:
      containers:
      - name: conv-app
        image: antonlarichev/conv-app:1.2
#        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
