dp-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-dp
spec:
  replicas: 1
  selector:
    matchLabels:
      components: postgres
  template:
    metadata:
      labels:
        components: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16
        ports:
          - containerPort: 5432
        resources:
          limits:
            memory: 512Mi
            cpu: 500m
