pod-conv-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: conv-app
  labels:
    homework: conv-app
spec:
  containers:
    - name: short-app
      image: antonlarichev/conv-app:1.2
      ports:
        - containerPort: 80
      resources:
        limits:
          memory: "512Mi"
          cpu: "1000m"
