2-part-svc-convtest-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-clustreip
spec:
  type: ClusterIP
  selector:
    app: conv-app
  ports:
    - protocol: TCP
      port: 80
