svc-conv-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: conv-app-svc
spec:
  type: NodePort
  ports:
    - port: 3000 # адрес порта доступный внутри кластера для других подов
      targetPort: 80
      nodePort: 31119
  selector:
    homework: conv-app
