svc-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432 # адрес порта доступный внутри кластера для других подов
  selector:
    components: postgres
