2-part-ingress-conv-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: conv.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-clustreip
            port:
              number: 80
